# ssa-ian

./: .coverage  README.md  docker-entrypoint.sh  pyproject.toml  sam.yaml
.github/workflows/: deploy.yml  python-exercice-check.yml
setup/: docker-compose.yaml  init.mysql.sql
src/scripts/: main.py
src/scripts/utils/: db.py
tests/: db_test.py  main_test.py
